# GenyConnect

./: CMakeLists.txt  GenyConnect.icns  README.md  README.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
GenyConnect.icon/: icon.json
properties/Windows/: app.rc  app.rc.in
properties/macOS/: Info.plist.in
publish/: genyconnect-1.2.768-macos-arm64-selfupdate  genyconnect-1.2.768-macos-x86_64-selfupdate
qml/: Main.qml
src/: connectionstate.cppm  linkparser.cpp  linkparser.cppm  main.cpp  serverprofile.cpp  serverprofile.cppm  serverprofilemodel.cpp  serverprofilemodel.cppm  systemproxymanager.cpp  systemproxymanager.cppm  updater.cpp  updater.cppm  vpncontroller.cpp  vpncontroller.cppm  xrayconfigbuilder.cpp  xrayconfigbuilder.cppm  xrayprocessmanager.cpp  xrayprocessmanager.cppm
src/platform/: macosappbridge.hpp  macosappbridge.mm
src/tunhelper/: main.cpp
src/updaterhelper/: main.cpp
ui/: Main.qml
ui/Controls/: ActionButton.qml  AddDownloadDialog.qml  Avatar.qml  Button.qml  Card.qml  CircleIconButton.qml  ComboBox.qml  DownloadDelegate.qml  DownloadListView.qml  FootButton.qml  FootMenu.qml  HorizontalLine.qml  HorizontalSpacer.qml  IconButton.qml  Image.qml  Label.qml  LayoutButton.qml  Menu.qml  MenuButton.qml  MiniButton.qml  NumberFlowText.qml  Panel.qml  PillButton.qml  PrimaryActionButton.qml  ProgressBar.qml  SignalBars.qml  SpeedTestGauge.qml  SpinBox.qml  Switch.qml  TabBar.qml  TabBarButton.qml  TabButton.qml  TabButtonMini.qml  Text.qml  TextArea.qml  TextField.qml  ToolTip.qml  VerticalLine.qml  VerticalSpacer.qml  WorldMapDots.qml  (+1 more)
ui/Core/: Colors.qml  FontSystem.qml  qmldir
ui/Dashboard/: qmldir
ui/Layout/: Footer.qml  Header.qml  MoreLink.qml  Setting.qml  qmldir
ui/Resources/image/: GenyConnect.icns
